[package]
name = "syx"
version = "0.5.1"
edition = "2021"
homepage = "https://github.com/ecks0/syx"
license = "MIT"
authors = ["eckso <eckso@eckso.io>"]

[features]
default = []
logging = ["log", "nix"]
nvml = [
  "nvml-wrapper",
  "once_cell",
  "tokio/rt"
]

[dependencies]
async-stream = "~0.3"
futures = "~0.3"
log = { version = "~0.4", optional = true }
nix = { version = "~0.23", optional = true }
nvml-wrapper = { version = "~0.7", optional = true }
once_cell = { version = "~1.9", optional = true }
parking_lot = "~0.11"
thiserror = "~1.0"

[dependencies.tokio]
version = "~1"
default-features = false
features = [
  "fs",
  "macros",
]
