[package]
name = "syx"
version = "0.5.2"
edition = "2021"
homepage = "https://github.com/ecks0/syx"
license = "MIT"
authors = ["eckso <eckso@eckso.io>"]

[features]
default = []
logging = ["log", "nix"]
nvml = [
  "nvml-wrapper",
  "tokio/parking_lot"
]

[dependencies]
async-stream = "~0.3"
futures = "~0.3"
log = { version = "~0.4", optional = true }
nix = { version = "~0.23", optional = true }
nvml-wrapper = { version = "~0.7", optional = true }
once_cell = { version = "~1.9", optional = true }
parking_lot = { version = "~0.11", features = ["send_guard"], optional = true }
thiserror = "~1.0"

[dependencies.tokio]
version = "~1"
default-features = false
features = [
  "fs",
  "macros",
  "sync",
]
